Fix scrollbar

--- a/apps/modernization-ui/src/design-system/modal/modal.module.scss
+++ b/apps/modernization-ui/src/design-system/modal/modal.module.scss
@@ -65,7 +65,7 @@ $footer-height: 5.75rem;
 
         padding: 1.5rem !important;
 
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 
     footer {
